--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
     <title>Hello world</title>
 </head>
 <body>
+ <header>
+        <h1>Hello world</h1>
+        <p>Que bom te ver por aqui!!!</p>
+
+ </header>
+
+ <section>
+        <h2>HTML</h2>
+        <P>Hypertext Markup Language (em português, Linguagem de Marcação de Hipertexto) estrutura sua página web.</P>
+
+        <h2>CSS</h2>
+        <P>Hypertext Markup Language (em português, Linguagem de Marcação de Hipertexto) estrutura sua página web.</P>
+        <img src="imagem/hello world.png" alt="imagens que estão associadas a programação">
+ </section>
+
+ <footer>
+        <p>Uma página desenvolvida por Alura Start</p>
+
+ </footer>
 
 </body>
 </html>
