--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello world</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
  <header>
@@ -14,7 +15,8 @@
 
  <section>
         <h2>HTML</h2>
-        <P>Hypertext Markup Language (em português, Linguagem de Marcação de Hipertexto) estrutura sua página web.</P>
+        <P><span class="texto-inglês">Hypertext Markup Language </span>(em português, Linguagem de Marcação de Hipertexto) estrutura a sua página web</P>
+        <P><span class="texto-inglês">Cascading Style Sheets </span>(em português, Folha de Estilo em Cascata) estiliza a sua página web</P>
 
         <h2>CSS</h2>
         <P>Hypertext Markup Language (em português, Linguagem de Marcação de Hipertexto) estrutura sua página web.</P>
